# cheeblr

./: .gitignore  .sops.yaml  IntegrationAnalysis.md  LICENSE  README.md  TODO.md  cheeblr.code-workspace  flake.nix  inventory.json  inventory_schema.json
.github/workflows/: ci.yml  nix-check.yml
Docs/: BackEnd.json  BackEnd.md  BackEndStateMachine.md  Cheeblr Security Plan.md  Crem.md  CurrentFocus.md  FrontEnd.json  FrontEnd.md  Fuzzing.md  Haskell_20250325_004541[FAIL] CREM EXPERIMENT.hs  MealyMachine.md  MissionStatement.md  NixDevEnvironment.md  SecurityStrategies.md  ThisBranch.md  main ruleset.json
backend/: cabal.project  cabal.project.freeze  chase-annotations.json  cheeblr-backend.cabal  fourmolu.yaml
backend/app/: Bootstrap.hs  E2EDriver.hs  Main.hs
backend/codegen/: Main.hs
backend/src/: App.hs  Logging.hs  Server.hs
backend/src/API/: Admin.hs  Auth.hs  Feed.hs  Inventory.hs  Manager.hs  OpenApi.hs  Stock.hs  Transaction.hs
backend/src/Auth/: Session.hs  Simple.hs
backend/src/Codegen/: Run.hs  Schema.hs
backend/src/Codegen/Generate/: API.hs  Common.hs  Database.hs  Server.hs  Types.hs
backend/src/Config/: App.hs  BuildInfo.hs  Env.hs
backend/src/DB/: Auth.hs  Database.hs  Events.hs  Register.hs  Reservation.hs  Schema.hs  Stock.hs  Transaction.hs
backend/src/DB/Transaction/: Refund.hs  Sale.hs  Typed.hs
backend/src/Effect/: Clock.hs  EventEmitter.hs  GenUUID.hs  InventoryDb.hs  RegisterDb.hs  StockDb.hs  TransactionDb.hs
backend/src/GraphQL/: Resolvers.hs  Schema.hs
backend/src/Infrastructure/: AvailabilityRelay.hs  AvailabilityState.hs  Broadcast.hs  SSE.hs
backend/src/Logging/: BroadcastScribe.hs
backend/src/Schemas/: Dispensary.hs
backend/src/Server/: Admin.hs  Auth.hs  Cookie.hs  Env.hs  Feed.hs  Manager.hs  Metrics.hs  Stock.hs  Transaction.hs
backend/src/Server/Middleware/: Tracing.hs
backend/src/Service/: Register.hs  Stock.hs  Transaction.hs
backend/src/State/: RegisterMachine.hs  SaleTransactionMachine.hs  StockPullMachine.hs  TransactionMachine.hs
backend/src/Types/: Admin.hs  Auth.hs  Events.hs  Inventory.hs  Location.hs  Stock.hs  Trace.hs  Transaction.hs
backend/src/Types/Events/: Availability.hs  Domain.hs  Inventory.hs  Log.hs  Register.hs  Session.hs  Stock.hs  Transaction.hs
backend/src/Types/Primitives/: Money.hs  Quantity.hs  Token.hs
backend/src/Types/Public/: AvailableItem.hs  FeedFrame.hs
backend/src/Types/Transaction/: Class.hs  Conversion.hs  Refund.hs  Sale.hs
backend/src/migrations/: 009_domain_events.sql
backend/test/: Spec.hs  SpecIntegration.hs
backend/test/Test/: Gen.hs
backend/test/Test/API/: AdminSpec.hs  OpenApiSpec.hs  TransactionSpec.hs
backend/test/Test/App/: CspSpec.hs  MiddlewareSpec.hs
backend/test/Test/Auth/: SimpleSpec.hs
backend/test/Test/DB/: PureFunctionsSpec.hs
backend/test/Test/DB/Transaction/: RefundSpec.hs  SaleSpec.hs
backend/test/Test/Effect/: EventEmitterSpec.hs  InventoryDbSpec.hs  StockDbSpec.hs
backend/test/Test/GraphQL/: IntegrationSpec.hs  ResolversSpec.hs  SchemaSpec.hs
backend/test/Test/Infrastructure/: AvailabilityRelaySpec.hs
backend/test/Test/Integration/: JsonContractSpec.hs
backend/test/Test/Manager/: LogicSpec.hs  TypesSpec.hs
backend/test/Test/Props/: JsonRoundtripSpec.hs  NegateSpec.hs  ParseShowSpec.hs  StateMachineSpec.hs
backend/test/Test/Server/: CookieSpec.hs
backend/test/Test/Server/Middleware/: TracingSpec.hs
backend/test/Test/Service/: RegisterSpec.hs  StockSpec.hs  TransactionSpec.hs
backend/test/Test/State/: RegisterMachineSpec.hs  StockPullMachineSpec.hs  TransactionMachineSpec.hs
backend/test/Test/Types/: AuthSpec.hs  InventorySpec.hs  TraceSpec.hs  TransactionSpec.hs
backend/test/Test/Types/Primitives/: MoneySpec.hs  QuantitySpec.hs
backend/test/Test/Types/Public/: AvailableItemSpec.hs  FeedFrameSpec.hs  FeedPrivacySpec.hs
backend/test/Test/Types/Transaction/: ConversionSpec.hs
frontend/: .spec-results  app-styles.css  cart_mockup.html  chase-annotations.json  cheeblr.code-workspace  index.html  spago.yaml  vite.config.js
frontend/assets/: assets.json
frontend/src/: Main.purs  Route.purs
frontend/src/API/: Admin.purs  Auth.purs  Authrequest.purs  Config.purs  Inventory.purs  Manager.purs  Refund.purs  Register.purs  Request.purs  Reservation.purs  Sale.purs  Stock.js  Stock.purs  Transaction.purs  Types.purs
frontend/src/Codegen/: Generate.purs  Main.purs  Run.purs  Schema.purs
frontend/src/Config/: Auth.purs  Entity.purs  InventoryFields.purs  LiveView.purs  Network.purs
frontend/src/Core/: Auth.purs  Cart.purs  Core.purs  Domain.purs  Money.purs  Product.purs  Register.purs  Schema.purs  Tag.purs  Tax.purs  Validation.purs
frontend/src/GraphQL/: Cleint.purs  Inventory.purs  Schema.purs
frontend/src/Pages/: CreateItem.purs  CreateTransaction.purs  DeleteItem.purs  EditItem.purs  LiveView.purs  Login.purs  TransactionHistory.purs
frontend/src/Schemas/: Dispensary.purs
frontend/src/Services/: API.purs  AuthService.purs  Cart.purs  CashRegister.purs  RegisterService.purs  TransactionService.purs
frontend/src/Types/: Admin.purs  Auth.purs  (+13 more)
frontend/test/: AdminTypes.purs  Auth.purs  AuthCookie.purs  Cart.purs  EnumInstances.purs  FeedTypes.purs  Formatting.purs  GraphQL.purs  GraphQLIntegration.purs  HttpIntegration.purs  IntegrationMain.purs  Inventory.purs  JsonContract.purs  Location.purs  Main.purs  ManagerTypes.purs  Money.purs  Session.purs  ShowInstances.purs  Stock.purs  TransactionJson.purs  UUID.purs  Validation.purs  ValidatorsV.purs  WebUtils.purs
nix/: app-config.nix  bootstrap-admin-tool.nix  build.nix  ci-shell.nix  codegen.nix  config.nix  containers.nix  deploy-nix.nix  deploy.nix  devScripts.nix  devShell.nix  devshell.nix  file-tools.nix  frontend.nix  manifest.nix  postgres-utils.nix  purs-nix.nix  secrets.nix  sops-dev.nix  test-suite.nix  tls.nix  tui
nix/scripts/: compile-manifest.hell  devScripts.nix  file-tools.nix  manifest-tui.nix  manifest.nix
nix/services/: nixos-services.nix  postgresql-service.nix
secrets/: cheeblr.yaml
src/: Render.purs
(+65 files in other folders)
