cabal-version: 3.14
name: cheeblr-backend
version: 0.0.0.4
category: web
author: Harry Pray IV
maintainer: harryprayiv@harryprayiv.com
copyright: Harry Pray IV
homepage: https://github.com/harryprayiv/cheelbr/cheeblr-backend
bug-reports: https://github.com/harryprayiv/cheeblr/issues

flag use-pkg-config
    description: Use pkg-config to find libpq
    default: True
    manual: True

common shared-properties
    ghc-options: -Wall
                 -O2
                 -threaded
    build-depends: base
                , servant
                , servant-server
                , transformers
                , aeson
                , wai
                , warp 
                , opaleye
                , postgresql-simple 
                , postgresql-libpq
                , text
                , uuid
                , time
                , mtl
                , split
                , scientific
                , vector
                , resource-pool
                , wai-cors
                , bytestring
                , unix
                , http-types
                , case-insensitive

library
    import: shared-properties
    exposed-modules: App
                   , DB.Database
                   , DB.Transaction
                   , Server
                   , Server.Transaction
                   , Types.Inventory
                   , Types.Transaction
                   , API.Inventory
                   , API.Transaction
                   -- Codegen modules
                   , Codegen.Schema
                   , Codegen.Run
                   , Codegen.Generate.Common
                   , Codegen.Generate.Types
                   , Codegen.Generate.Database
                   , Codegen.Generate.API
                   , Codegen.Generate.Server
                   , Schemas.Dispensary
                   -- Generated modules (created by domain-codegen)
                   , Generated.Types.Inventory
                   , Generated.DB.Inventory
                   , Generated.API.Inventory
                   , Generated.Server.Inventory
    build-depends: refined
                 , string-conversions
                 , filepath
                 , directory
    hs-source-dirs: src

executable cheeblr-backend
    import: shared-properties
    ghc-options: -rtsopts
                "-with-rtsopts=-N"
    main-is: Main.hs
    hs-source-dirs: app
    build-depends: cheeblr-backend
    pkgconfig-depends: libpq

executable domain-codegen
    import: shared-properties
    ghc-options: -rtsopts
    main-is: Main.hs
    hs-source-dirs: codegen
    build-depends: cheeblr-backend
                 , filepath
                 , directory