cabal-version: 3.14
name: cheeblr-backend
version: 0.0.0.5
category: web
author: Harry Pray IV
maintainer: harryprayiv@harryprayiv.com
copyright: Harry Pray IV
homepage: https://github.com/harryprayiv/cheelbr/backend
bug-reports: https://github.com/harryprayiv/cheeblr/issues

flag use-pkg-config
    description: Use pkg-config to find libpq
    default: True
    manual: True

common shared-properties
    ghc-options: -Wall
                 -O2
                 -threaded
    build-depends: base
                , servant
                , servant-server
                , transformers
                , aeson
                , containers
                , directory
                , tls
                , wai
                , warp
                , warp-tls
                , morpheus-graphql >= 0.27
                , morpheus-graphql-core
                , opaleye
                , rel8
                , hasql-pool
                , hasql
                , postgresql-libpq
                , singletons-th
                , singletons-base
                , text
                , uuid
                , time
                , mtl
                , split
                , scientific
                , vector
                , resource-pool
                , wai-cors
                , bytestring
                , unix
                , http-types
                , case-insensitive
                , crem
                , openapi3
                , servant-openapi3
                , lens
                , rel8
                , effectful
library
    import: shared-properties
    exposed-modules: App
                   , DB.Database
                   , DB.Transaction
                   , DB.Schema
                   , Server
                   , Server.Transaction
                   , Types.Inventory
                   , Types.Transaction
                   , Types.Auth
                   , Auth.Simple
                   , API.Inventory
                   , API.Transaction
                   , API.OpenApi
                   , GraphQL.Resolvers
                   , GraphQL.Schema
                   , State.TransactionMachine
                   , State.RegisterMachine
                   , Service.Transaction
                   , Service.Register
                   , Effect.TransactionDb
                   , Effect.InventoryDb
                   , Effect.RegisterDb
                   , Effect.Clock
                   , Effect.GenUUID
    build-depends: refined
                 , string-conversions
                 , filepath
                 , directory
    hs-source-dirs: src

executable cheeblr-backend
    import: shared-properties
    ghc-options: -rtsopts
                "-with-rtsopts=-N"
    main-is: Main.hs
    hs-source-dirs: app
    build-depends: cheeblr-backend
    pkgconfig-depends: libpq

test-suite cheeblr-unit-tests
    import:         shared-properties
    type:           exitcode-stdio-1.0
    main-is:        Spec.hs
    hs-source-dirs: test
    other-modules:
        Test.Types.AuthSpec
        Test.Types.TransactionSpec
        Test.Types.InventorySpec
        Test.Auth.SimpleSpec
        Test.API.TransactionSpec
        Test.API.OpenApiSpec
        Test.DB.PureFunctionsSpec
        Test.GraphQL.SchemaSpec
        Test.GraphQL.ResolversSpec
        Test.State.TransactionMachineSpec
        Test.Effect.InventoryDbSpec
        Test.State.RegisterMachineSpec
        Test.Service.TransactionSpec
        Test.Service.RegisterSpec
    build-depends:
        cheeblr-backend
        , hspec

test-suite cheeblr-integration-tests
    import:         shared-properties
    type:           exitcode-stdio-1.0
    main-is:        SpecIntegration.hs
    hs-source-dirs: test
    other-modules:
        Test.Integration.JsonContractSpec
        Test.GraphQL.IntegrationSpec
    build-depends:
        cheeblr-backend
        , hspec